W8 Authroute & swagger Design update
